--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,8 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vuex"></script>
-    <script defer src="socket.js"></script>
+    <script defer type="module" src="socket.js"></script>
+    <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
     <title>Train Game</title>
 </head>
 
@@ -70,7 +71,7 @@
             send_button(row, col, direction) {
                 var id = (row * 3 + col - 4) + '-' + direction;
                 // console.log(id);
-                Socket.sendRail(id);
+                Util.sendRail(id);
                 var i;
                 if (this.clicked.includes(id)) {
                     this.clicked = this.clicked.filter(function (value) { return value != (id); });
