new branch Gene

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,8 +49,12 @@
                 </div>
             </div>
             <div class="sidebar">
-                <div class="history"></div>
-                <div class="chatbox"></div>
+                <div class="history">
+                    <div class="historyArea"></div>
+                </div>
+                <div class="chatbox">
+                    <div class="chatArea"></div>
+                </div>
             </div>
         </div>
         
