--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,8 @@
         <script defer src="/socket.io/socket.io.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vuex"></script>
-    <script defer src="socket.js"></script>
+    <script defer src="/client/socket"></script>
+    <script defer src="/client/constants"></script>
     <title>Train Game</title>
 </head>
 
