--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,8 +18,8 @@
     <div id="app">
         <div class="header"> </div>
         <div class="d-flex flex-row">
-            <div class="container m-0 p-0">
-                <div v-for="row in height" class="row justify-content-center" :key="row">
+            <div class="col-md-auto container ml-5 mr-5">
+                <div v-for="row in height" class="row justify-content-center ml-5 mr-5" :key="row">
                     <div v-for="col in width" class="col col-md-auto" :key="col">
                         <div class="row">
                             <div class="col-md-auto rail-vertical-invis"></div>
@@ -49,7 +49,7 @@
                 <button type="button" class="btn btn-success btn-lg btn-block mt-2 mb"> Go</button>
             </div>
         
-            <div class="sidebar">
+            <div class="flex-grow-1">
                 <div class="history"></div>
                 <div class="chatbox"></div>
             </div>
